fix: increase directions marker size 20% and shift left slightly

--- a/components/directions-marker-icon/directions-marker-icon.css
+++ b/components/directions-marker-icon/directions-marker-icon.css
@@ -2,8 +2,9 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  width: 0.6125rem;
-  height: 0.6125rem;
+  width: 0.735rem;
+  height: 0.735rem;
+  margin-left: -0.125rem;
   flex-shrink: 0;
   overflow: visible;
 }
@@ -14,7 +15,7 @@
   width: 0;
   height: 0;
   overflow: visible;
-  transform: scale(0.245);
+  transform: scale(0.294);
   transform-origin: center center;
 }
 
